--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 	<pre>Initial Position x0=</pre><textarea id="iniPosX" class="numInput"></textarea><br>
 	<pre>Initial Position y0=</pre><textarea id="iniPosY" class="numInput"></textarea><br>
 	<pre>Initial Velocity vx0=</pre><textarea id="iniVelX" class="numInput"></textarea><br>
-	<pre>Initial Velocity vy0=</pre><textarea id="iniVelY" class="numInput"></textarea>
+	<pre>Initial Velocity vy0=</pre><textarea id="iniVelY" class="numInput"></textarea><br>
+	<pre>Show Gridlines</pre><input id="gridlines" class="checkbox" type="checkbox"></input>
 
 	<br><br>
 
