Earth and moon are shown now! :)

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 	<pre>Initial Position y0=</pre><textarea id="iniPosY" class="numInput"></textarea><br>
 	<pre>Initial Velocity vx0=</pre><textarea id="iniVelX" class="numInput"></textarea><br>
 	<pre>Initial Velocity vy0=</pre><textarea id="iniVelY" class="numInput"></textarea><br>
+	<pre>Earth Radius rE=</pre><textarea id="rEarth" class="numInput"></textarea><br>
+	<pre>Moon Radius rM=</pre><textarea id="rMoon" class="numInput"></textarea><br>
 	<pre>Show Gridlines</pre><input id="gridlines" class="checkbox" type="checkbox"></input>
 
 	<br><br>
