Broke calcRate, dispRate, and timeRate into separate, well-defined, and distinct things so the user can mess with them.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 	<!-- mEarth, t, G, x0, y0, vx0, vy0 -->
 
 	<pre>Center Mass m=</pre><textarea id="massCenter" class="numInput"></textarea><br>
-	<pre>Simulation Seconds per Real Second kt=</pre><textarea id="timeRatio" class="numInput"></textarea><br>
+	<pre>Simulation Seconds per Real Second kt=</pre><textarea id="timeRate" class="numInput"></textarea><br>
+	<pre>Calculation Steps per Simulated Second c=</pre><textarea id="calcRate" class="numInput"></textarea><br>
+	<pre>Time Between Displayed Points px=</pre><textarea id="dispRate" class="numInput"></textarea><br>
 	<pre>Universal Gravitational Constant G=</pre><textarea id="gConstant" class="numInput"></textarea><br>
 	<pre>Initial Position x0=</pre><textarea id="iniPosX" class="numInput"></textarea><br>
 	<pre>Initial Position y0=</pre><textarea id="iniPosY" class="numInput"></textarea><br>
