--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<br><br>
 
 	<div id="animate" class="button">Animate</div>
+	<div id="pause" class="button">Pause</div>
 </div>
 <div id="right">
 	<canvas id="graphArea" width="900px" height="900px"></canvas>
